--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+# ------------------------------------------------------------------------------
+# .gitignore - files and folders to ignore in Git
+# ------------------------------------------------------------------------------
+
+# ------------------------------------------------------------------------------
+# IDE / editor config files
+# ------------------------------------------------------------------------------
 .vscode/
+
+# ------------------------------------------------------------------------------
+# Python virtual environment directory
+# ------------------------------------------------------------------------------
 .venv/
+
+# ------------------------------------------------------------------------------
+# Jupyter notebook checkpoints
+# ------------------------------------------------------------------------------
 .ipynb_checkpoints/
